Xfce v4.18: Fix invisible items in thunar sidebar

--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -6203,10 +6203,6 @@ ConversationListView {
 .thunar toolbar.horizontal button image {
   -gtk-icon-transform: scale(0.72); }
 
-scrolledwindow.sidebar treeview.view {
-  background: #1d232f;
-  padding: 1.5px; }
-
 /* path-bar of thunar */
 window.thunar toolbar#location-toolbar > toolitem > widget > widget.linked.path-bar .path-bar-button {
   color: #d8dee9;
@@ -6246,11 +6242,14 @@ window.thunar toolbar#location-toolbar > toolitem > widget > widget.linked.path-
   text-shadow: none; }
 
 /* thunar sidepane */
-window.thunar paned > scrolledwindow treeview.view:hover, window.thunar paned > scrolledwindow treeview.view:selected {
-  background: rgba(205, 126, 191, 0.7);
-  color: #fff;
-  border-radius: 0;
-  box-shadow: none; }
+.thunar scrolledwindow.sidebar treeview.view {
+  background: #1d232f;
+  padding: 1.5px; }
+  .thunar scrolledwindow.sidebar treeview.view:hover, .thunar scrolledwindow.sidebar treeview.view:selected {
+    background: rgba(205, 126, 191, 0.7);
+    color: #fff;
+    border-radius: 0;
+    box-shadow: none; }
 
 .caja-notebook .entry {
   background: #2e394c;
